--- a/index.html
+++ b/index.html
@@ -30,27 +30,9 @@
     <!-- Tab panes -->
     <div class="tab-content" id="content">
       <div role="tabpanel" class="tab-pane fade in active" id="home">
-        <button class="accordion">
-          <img src="avatars/phil.png"></img>
-          <h3>Phill Miller</h3>
-          <h2>Hombre vivo en Tucson</h2>
-        </button>
-        <div class="panel">
-          <p><h3>Espero que alguien lo vea</h3></p>
-          <img src="images/tucson.jpg"></img>
-          <p><h5>Tucson</h5></p>
-          <p><h5>10/02/2017</h5></p>
-        </div>
-
-        <button class="accordion"><h1>Section 1</h1></button>
-        <div class="panel">
-          <p>Lorem ipsum...</p>
-        </div>
+        <div id="update"></div>
       </div>
-
-      <div role="tabpanel" class="tab-pane fade" id="profile">
-        <h3>Perfil</h3>
-      </div>
+      <div role="tabpanel" class="tab-pane fade" id="profile"></div>
     </div>
   </div>
 
